@@ -1,0 +1,4 @@
+# This list should contain *only* gweather/Locations.xml.in.
+# Everything else should be in POTFILES.skip.
+[encoding:UTF-8]
+gweather/Locations.xml.in
