@@ -65,6 +65,7 @@ gweather/gweather-applet.c
 gweather/gweather-dialog.c
 gweather/gweather-pref.c
 gweather/gweather.schemas.in
+gweather/location.c
 gweather/main.c
 gweather/weather.c
 mailcheck/GNOME_MailCheckApplet.xml
