@@ -2,3 +2,4 @@
 # should NOT be translated.
 # Please keep this file sorted alphabetically.
 gweather/location.c
+gweather/Locations.xml.in
