@@ -1,0 +1,8 @@
+2004-06-23  Gareth Owen  <gowen72@yahoo.com>
+
+	* POTFILES.in: Initial commit
+	* POTFILES.skip: Initial commit
+	* .cvsignore.in: Initial commit
+
+	Patch by Danilo Segan
+
