@@ -1,3 +1,10 @@
+2004-06-23  Gareth Owen  <gowen72@yahoo.com>
+
+	* POTFILES.in, POTFILES.skip: Moved gweather/Locations.xml.in to skip
+	file, as this is now translated in a seperate domain.
+
+	Patch by Danilo Segan
+
 2004-06-22  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated Portuguese translation.
