@@ -1,3 +1,9 @@
+2004-06-23  Gareth Owen  <gowen72@yahoo.com>
+
+	* Makefile.am: move location translations to a seperate domain.
+
+	Patch by Danilo Segan
+
 2004-06-21  Gareth Owen  <gowen72@yahoo.com>
 
 	* docs/eu/.cvsignore: Quieten CVS 
